MH-5673 Updated init script based on Rubencinos code review and Tobias comment
git-svn-id: https://opencast.jira.com/svn/MH/trunk@9278 e6edf6fb-f266-4316-afb4-e53d95876a76